# me424-robot

./: README.md  platformio.ini
app/: app.js  index.html  styles.css
data/: app.js  index.html  styles.css
docs/: application_ui_subsection.tex  code_appendix.tex  code_appendix_simple.tex
main_board/: main_board.ino
mosfet_board/: mosfet_board.ino
poses/: me424-homing.json  me424-saw-grab.json  me424-saw-truw-zero.json  me424-saw67.json  me424-saw8.json  me424-sequence1.json  me424-sequence2.json  me424-vac1.json  me424-vac2.json  saw-attempt-3.json  saw-attempt-4.json  saw-attempt-5.json  saw-attempt2.json  saw-grab-true-zero.json
ros-py/: .env  py_cmd_ref.txt  py_config_cmds.txt  robot_dimensions.txt  serial_bridge.py
ros-py/arm-robot/: config.json  robot.urdf
ros-py/arm-robot/assets/: 104t_ringpulley.part  104t_ringpulley.stl  42t_pulley.part  42t_pulley.stl  48t_pulley.part  90_fitting.stl  b_limitmount_017.part  b_motorplate_010.part  b_pvcmount_012.part  b_turntablebase_001.stl  composite_part_1__2.part  part_1.stl  (+65 more)
ros-py/arm_robot_bridge(old)/: package.xml  setup.py
ros-py/ros_def/ramses_ik/: package.xml  setup.cfg  setup.py
ros-py/ros_def/ramses_ik/ramses_ik/: arm_model.py  calibrate.py  ik_solver.py  teleop_keyboard.py
ros-py/ros_def/ramses_robot_description/: CMakeLists.txt  package.xml
ros-py/ros_def/ramses_robot_description/config/: ramses.rviz
ros-py/ros_def/ramses_robot_description/launch/: display.launch.py  robot.launch.py  rviz.launch.py
ros-py/ros_def/ramses_robot_description/meshes/: 90_fitting.part  b_pvcmount_012.stl  b_tensionstandoff_011.part  b_turntablebase_001.part  composite_part_1.part  ds_centraldockadapter_001.part  ds_leftframe_002.part  ds_rightframe_003.part  hex_nut_grade_a___b_m8x1_25__3430b5bbd516b81b52e50f5ca3422a70.part  hex_socket_head_cap_screw_m8x1_25_x_25__a9f2d9bcc6cdc071be143b59fb9dc981.part  hex_socket_head_cap_screw_m8x1_25_x_40_x_28__9a8af78ec9bc198fcc4824b485acf1fa.part  hex_socket_head_cap_screw_m8x1_25_x_40_x_28__9a8af78ec9bc198fcc4824b485acf1fa.stl  nema17_5_1_gearbox.part  nema17_5_1_gearbox.stl  nema17_pancake.part  nema23_2_0nm.part  nema23_5_1_planetarygearbox.part  nema23_5_1_planetarygearbox.stl  part_10.part  part_10.stl  part_10__2.part  part_11.stl  part_11__2.part  part_12.stl  part_13.part  part_13.stl  part_16.part  part_1__10.part  part_1__11.part  part_1__11.stl  part_1__2.part  part_1__2.stl  part_1__4.part  part_1__6.part  part_1__6.stl  part_1__8.part  part_1__9.part  part_2.stl  part_2__2.part  part_2__2.stl  (+43 more)
ros-py/ros_def/ramses_robot_description/urdf/: robot.urdf
ros-py/ros_def/ramses_robot_interfaces/: CMakeLists.txt  package.xml
ros-py/ros_def/ramses_robot_interfaces/action/: ArmMove.action
sensor_board/: sensor_board.ino
src/main_board/: main.cpp
src/mosfet_board/: main.cpp
src/sensor_board/: main.cpp
wokwi/: README.md  diagram.json
(+13 files in other folders)
