<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ramses_ik</name>
  <version>0.1.0</version>
  <description>IK solver and keyboard teleop for the Ramses 5-DOF robotic arm.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ramses_robot_interfaces</depend>
  <depend>ramses_robot_description</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>