<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ramses_robot_interfaces</name>
  <version>0.1.0</version>
  <description>
    ROS2 serial bridge for the ME424 5-DOF robotic arm ESP32 controller.
    Exposes an action server for blocking motion commands and a topic
    subscriber for fire-and-forget commands. Publishes joint states for
    RViz2 visualisation and structured state topics (estop, limits).
  </description>
  <maintainer email="connorbrannonmitchell@gmail.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Runtime -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Python node deps -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>action_msgs</depend>

  <!-- pyserial: sudo apt install python3-serial  OR  pip install pyserial -->

  <!-- Test deps -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
